[tool.poetry]
name = "repl_python3_MusicBot-Mohrchen"
version = "0.1.0"
description = ""
authors = ["Moehrchen <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
youtube_dl = "^2021.12.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
